# agentopia

./: .env  .env.example  .gitignore  .npmrc  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  docker-compose.hermes-openwebui.yml  docker-compose.yml  env.agentopia.template  openapi.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: page.tsx
docs/: agentopia-local-stack.md  alerts.md  api-key-rotation-revocation.md  approval-audit-trail.md  approval-expiration.md  approval-reconciliation.md  approval-recovery-tools.md  approval-review-visibility.md  architecture.md  artifact-access-redaction.md  audit-logging.md  backup-restore-plan.md  cancellation-support.md  clean-base-repo-prep.md  client-api-authentication.md  consistent-error-messages.md  container-image-versioning.md  correlation-ids.md  customer-api-docs.md  dangerous-action-tests.md  dead-letter-handling.md  dependency-aware-health-checks.md  dependency-vulnerability-scanning.md  deployment-process.md  durable-queue.md  durable-storage-layout.md  example-flow.md  failure-path-tests.md  hermes-agentopia-isolation.md  hermes-api.md  hermes-boundary-rules.md  hermes-executor-dispatch-boundary.md  hermes-local-runtime-inventory.md  hermes-openwebui.md  hermes-upgrade-validation-checklist.md  http-process-e2e-tests.md  idempotent-result-handling.md  idempotent-task-submission.md  image-dependency-provenance.md  implementation-phases.md  (+89 more)
fixtures/: memory_quality_cases.json  task_request_invalid.json  task_request_valid.json  task_result_invalid.json  task_result_valid.json
hermes/: app.py  (+29 more)
(+224 files in other folders)
